Fixed tab names

--- a/index.html
+++ b/index.html
@@ -94,33 +94,33 @@
 						</header>
 						<ul class="tabs">
 							<li>
-								<h3>Insights</span></h3>
+								<h3>Insights</h3>
 								<div class="spotlight">
 									<ul>
 										<li>
 											<h4>Usability Testing</h4>
-											<p>We test your designs and prototypes with users and provide you with detailed metrics and recommendations. We can conduct sessions at your location, at a third-party research facility, or using a remote testing platform. We partner with sourcing firms to locate participants, or can source from your current customers. </p>
+											<p>We test your designs and prototypes with users and provide you with detailed metrics and recommendations. We can conduct sessions at your location, a third-party research facility, or using a remote testing platform. We can partner with sourcing firms to locate participants, or source from your current customers. </p>
 										</li>
 										<li>
 											<h4>Actionable Surveys</h4>
-											<p>Asking the right questions to gather meaningful data is critical. We carefully design every survey to optimize insights and work with you to determine how to apply the results. Where results point to a need for more in-depth research, we recommend and conduct further qualitative studies.</p>
+											<p>Asking the right questions to gather meaningful data is critical. We carefully design every survey to optimize insights and work with you to determine how to apply the results. When results point to a need for more extensive research, we recommend and conduct further qualitative studies.</p>
 										</li>
 									</ul>
 									<span class="image"><img src="images/insights.jpg" alt="user photo" /></span>
 									<ul>
 										<li>
 											<h4>Generative Research</h4>
-											<p>In-depth interviews and observing users' behaviors as they use your product as part of their workflows provides insights into needs and frustration points you may never have known existed. We deliver thorough qualitative analysis to give your a broader picture of who your customers are and what resonates with them. </p>
+											<p>In-depth interviews and observing users' behaviors as they use your product as part of their workflows provides insights into needs and frustration points you may never have known existed. We deliver thorough qualitative analysis to give you a broader picture of who your customers are and what resonates with them. </p>
 										</li>
 										<li>
 											<h4>Ideation and Co-Design</h4>
-											<p>In most organizations, people in varying roles interact with customers at different points and can bring insights to the design process. We guide your team through collaborative ideation and design sessions and provide the outcomes in a format ready for roadmap and backlog planning. </p>
+											<p>In most organizations, people in varying roles interact with customers at different points and can bring insights to the design process. We guide your team through collaborative ideation and design sessions. We provide the outcomes in a format ready for roadmap and backlog planning. </p>
 										</li>
 									</ul>
 								</div>
 							</li>
 							<li>
-								<h3>Informed <span class="extra">Roadmaps</span></h3>
+								<h3>Informed Roadmaps</h3>
 								<div class="spotlight">
 									<ul>
 										<li>
@@ -146,7 +146,7 @@
 								</div>
 							</li>
 							<li>
-								<h3>Team <span class="extra">Success</span></h3>
+								<h3>Team Success</h3>
 								<div class="spotlight">
 									<ul>
 										<li>
@@ -155,13 +155,13 @@
 										</li>
 										<li>
 											<h4>Agile Coaching</h4>
-											<p>Is Scrum, Kanban, Scrumban, or another Agile hybrid methodology right for your team? We assess your needs, recommend an approach, and coach your team so that the process works for, not against, them.</p>
+											<p>Is Scrum, Kanban, Scrumban, or another Agile hybrid methodology right for your team? We assess your needs, recommend an approach, and coach your team so that the process works to maximize their time developing customer-focused features.</p>
 										</li>
 									</ul>
 									<span class="image"><img src="images/Team.jpg" alt="" /></span>
 									<ul>
 										<li>
-											<h4>Customer-focused Team Building </h4>
+											<h4>Customer-Focused Team Building </h4>
 											<p>Helping software developers understand who they're building products for is one of our passions. We take the insights we gain from user research and engage developers in interactive, fun experiences to broaden their perspectives and ignite their passion for building products people love to use.</p>
 										</li>
 										<li>
