top margin decreased

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
 				<!-- Banner -->
 					<section id="banner">
-						<div class="content primary">
-                            <h3>Solving a usability problem after a product's release is 100 times more expensive than catching it in the design phase.<H3>
+						<div class="content secondary">
+                            <h3>Solving a usability problem after a product's release is 100 times more expensive than catching it during the design phase.<H3>
                                 <H3>We help you bring software products to market people love to use.</H3>
                             <br><br><br>
 							<header>
