replace logo with svg

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="content secondary">
-                            <img src="images/UxsellsLogo_completeXSmall.png" alt="UXSells Logo">
+                            <img src="images/UXSells.svg" alt="UXSells Logo">
                             <h3>Research --> Roadmap --> Revenue </h3>
                             <br>
                             <h3>Solving a usability problem after a product's release is 100 times more expensive than catching it during the design phase.<H3>
