--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
 										
 										<li>
                                             <h4>Usability Testing</h4>
-											<p>We test your designs and prototypes with users and provide you with detailed metrics and recommendations. We can conduct sessions at your location, a third-party research facility, or using a remote testing platform. We can partner with sourcing firms to locate participants, or source from your current customers. 
+											<p>We test your designs and prototypes with users and provide you with detailed metrics and recommendations. We can conduct sessions at your location, a third-party research facility, or using a remote testing platform. We partner with sourcing firms to locate participants, or source from your current customers. 
                                             </li>
                                             <li>
 											<h4>Ideation and Co-Design</h4>
-											<p>In most organizations, people in varying roles interact with customers at different points and can bring insights to the design process. We guide your team through collaborative ideation and design sessions. We provide the outcomes in a format ready for roadmap and backlog planning. </p>
+											<p>In most organizations, people in varying roles interact with customers at different points and can bring insights to the design process. We guide your team through collaborative ideation and design sessions. At the conclusion we provide the outcomes in a format ready for roadmap and backlog planning. </p>
 										</li>
 									</ul>
 								</div>
