--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
 
 				<!-- Section -->
 					<section id="one" class="main">
-						<header class="accent1">          
+						<header class="accent1"> 
+                            <h3>"I would highly recommend Kate at UXsells if you need assistance with user research, strategizing, and creating a roadmap"<br>
+                            <h3>-Jaime Martinez, CEO at Schola</h3>
 						</header>
 						<ul class="tabs">
 							<li>
