Missed closing tags

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					<section id="one" class="main">
 						<header class="accent2"> 
                             <h3>"I would highly recommend Kate at UXsells if you need assistance with user research, strategizing, and creating a roadmap"<br>
-                            <h3>-Jaime Martinez, CEO at Schola</h3>
+                            -Jaime Martinez, CEO at Schola</h3>
 						</header>
 						<ul class="tabs accent1">
 							<li>
@@ -152,28 +152,29 @@
 								</div>
 							</li>
 						</ul>
-
+					</section>
     <!-- Form -->
 											
-    <div class="content secondary">
-		<div class="inner">
-			<hr>
-			<h3><a name="contact">Contact Us</a></h3> 
-			<p>Please email us and we will contact you within 24 hours to schedule a free initial consultation:<br>
-			<strong><a href="mailto:info@uxsells.com?Subject=Consultation">info@uxsells.com</a></strong></p>
-			<p>We are available for in-person consultations within the greater Phoenix, Arizona metropolitan area. If you are outside this area, we are happy to set up a web meeting to discuss your needs. </p>
+    	<div class="content secondary">
+			<div class="inner">
+				<hr>
+				<h3><a name="contact">Contact Us</a></h3> 
+				<p>Please email us and we will contact you within 24 hours to schedule a free initial consultation:<br>
+				<strong><a href="mailto:info@uxsells.com?Subject=Consultation">info@uxsells.com</a></strong></p>
+				<p>We are available for in-person consultations within the greater Phoenix, Arizona metropolitan area. If you are outside this area, we are happy to set up a web meeting to discuss your needs. </p>
 								
-        </div>
+    	    </div>
 
-		<!-- Footer -->
-		<footer id="footer">
-			<div class="copyright">
-				<p>&copy; 2018 Katosh LLC dba UXSells. All rights reserved.</p>
-			</div>
-		</footer>
+			<!-- Footer -->
+			<footer id="footer">
+				<div class="copyright">
+					<p>&copy; 2018 Katosh LLC dba UXSells. All rights reserved.</p>
+				</div>
+			</footer>
 
+		</div>
 	</div>
-
+	
 	<!-- Scripts -->
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/jquery.dropotron.min.js"></script>
