--- a/index.html
+++ b/index.html
@@ -14,42 +14,20 @@
 			<div id="wrapper">
 
 				<!-- Header -->
-                <!--
 					<header id="header" class="alt">
-				-->
-
 
 						<!-- Nav -->
-                         <!--
 							<nav id="nav">
                                
 								<ul>
 									<li class="current"><a href="index.html">Home</a></li>
-									<li>
-										<a href="#" class="icon fa-angle-down">Dropdown</a>
-										<ul>
-											<li><a href="#">Option One</a></li>
-											<li><a href="#">Option Two</a></li>
-											<li><a href="#">Option Three</a></li>
-											<li>
-												<a href="#">Submenu</a>
-												<ul>
-													<li><a href="#">Option One</a></li>
-													<li><a href="#">Option Two</a></li>
-													<li><a href="#">Option Three</a></li>
-													<li><a href="#">Option Four</a></li>
-												</ul>
-											</li>
-										</ul>
-									</li>
-									<li><a href="generic.html">Generic</a></li>
-									<li><a href="elements.html">Elements</a></li>
+									<li><a href="about.html">About</a></li>
+									<li><a href="contact.html">Contact</a></li>
 								</ul>
 
 							</nav>
 
 					</header>
--->
 
 				<!-- Banner -->
 					<section id="banner">
