--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 			<!-- Footer -->
 			<footer id="footer">
 				<div class="copyright">
-					<p>&copy; 2018 Katosh LLC dba UXSells. All rights reserved.</p>
+					<p>&copy; 2019 Katosh LLC dba UXsells. All rights reserved.</p>
 				</div>
 			</footer>
 
