Em dash in tagline

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<div class="content">
 							<h1 class="sr-only">UXSells</h1>
                             <img src="images/UXSells.svg" alt="UXSells Logo">
-                            <h2>Research --> Roadmap --> Revenue </h2>
+                            <h4>Research &mdash;> Roadmap &mdash;> Revenue </h4>
                             <p class="lead">Solving a usability problem after a product's release is 100 times more expensive than catching it during the design phase.</p>
 							<p class="lead">We help you bring software products to market that people love to use.</p>
 							<a href="#contact" class="button big wide scrolly">Free Consultation</a>
