Button link to Contact Us and misc

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <h4>Research &mdash;> Roadmap &mdash;> Revenue </h4>
                             <p class="lead">Solving a usability problem after a product's release is 100 times more expensive than catching it during the design phase.</p>
 							<p class="lead">We help you bring software products to market that people love to use.</p>
-							<a href="#contact" class="button big wide scrolly">Free Consultation</a>
+							<a href="contact.html" class="button big wide scrolly">Free Consultation</a>
 						</div>
 					</section>
 
@@ -46,7 +46,7 @@
 					<section id="one" class="main">
 						<header class="accent2"> 
                             <h3>"I would highly recommend Kate at UXsells if you need assistance with user research, strategizing, and creating a roadmap"<br>
-                            -Jaime Martinez, CEO at Schola</h3>
+                            -Jaime Martinez, CEO at Schola, Inc.</h3>
 						</header>
 						<ul class="tabs accent1">
 							<li>
