--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 								
 				
 								<h3>Kate Larson UXC, CSPO</h3>
-								<p>Kate Larson's passion is bringing software products to market that people love to use. Her experience spans product management, user
+								<p>Kate's passion is bringing software products to market that people love to use. Her experience spans product management, user
 experience research, project management, technical communication, and training across a variety of markets.
 In recent years, she’s focused on partnering with companies to launch effective solutions in
 Education Technology.
