--- a/index.html
+++ b/index.html
@@ -35,8 +35,13 @@
 							<h1 class="sr-only">UXSells</h1>
                             <img src="images/UXSells.svg" alt="UXSells Logo">
                             <h4>Research &mdash;> Roadmap &mdash;> Revenue </h4>
+                            <!--
                             <p class="lead">Solving a usability problem after a product's release is 100 times more expensive than catching it during the design phase.</p>
-							<p class="lead">We help you bring software products to market that people love to use.</p>
+                        -->
+							<p class="lead">We help you bring products to market that people love to use.
+                            <p>
+                            </p>
+                            </p>
 							<a href="contact.html" class="button big wide scrolly">Free Consultation</a>
 						</div>
 					</section>
