--- a/about.html
+++ b/about.html
@@ -36,12 +36,9 @@
 								
 				
 								<h3>Kate Larson UXC, CSPO</h3>
-								<p>Kate's passion is bringing software products to market that people love to use. Her experience spans product management, user
-experience research, project management, technical communication, and training across a variety of markets.
-In recent years, she’s focused on partnering with companies to launch effective solutions in
-Education Technology.
+								<p>Kate's passion is bringing software products to market that people love to use. Her experience spans product management, user experience research, project management, technical communication, and training across a variety of markets. In recent years, she’s focused on partnering with companies to launch effective solutions in Education Technology.</p>
 
-For more information on Kate’s background, see <a href="https://www.linkedin.com/in/katelarsonuxsells/">LinkedIn</a>.</p>
+<p>For more information on Kate’s background, see <a href="https://www.linkedin.com/in/katelarsonuxsells/">LinkedIn</a>.</p>
 							</div>
 						</div>
 					</section>
