--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 					</header>
 
 				<!-- Section -->
-					<section id="one" class="main alt">
+					<section id="one" class="main">
 						<header class="accent1">
 							<h1>About Us</h1>
 						</header>
