Reduce header spacing

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 
 				<!-- Section -->
 					<section id="one" class="main">
-						<header class="accent1">
+						<header class="accent1 thin">
 							<h1>Contact Us</h1>
 						</header>
 						<div class="inner alt">
