--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 									<ul>
 										<li>
 											<h4>Research-Driven Priorities</h4>
-											<p>We can help take the guess-work and stakeholder bias out of the process to ensure your roadmap is priorized for market success.</p>
+											<p>We can help take the guess-work and stakeholder bias out of the process to ensure your roadmap is prioritized for market success.</p>
 										</li>
 										<li>
 											<h4>Gap Analysis</h4>
