--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
 				<!-- Footer -->
 				<footer id="footer">
 					<div class="copyright">
-						<p>&copy; 2021 Katosh LLC dba UXSells. All rights reserved.</p>
+						<p>&copy; 2021 Katosh LLC dba UXsells. All rights reserved.</p>
 					</div>
 				</footer>
 
